# AlphaSurf

./: .gitignore  .pre-commit-config.yaml  README.md  atomsurf  bad_format.py  envrules.md  requirements.txt  setup.py
alphasurf/: __init__.py
alphasurf/network_utils/: __init__.py
alphasurf/network_utils/communication/: blocks.py  passing_utils.py  surface_graph_comm.py  utils_blocks.py
alphasurf/network_utils/misc_arch/: __init__.py  deltaconv.py  dgcnn.py  dmasif_encoder.py  gatr_encoder.py  graph_blocks.py  gvp_gnn.py  pointnet.py  pronet.py  s3f_blocks.py  (+1 more)
alphasurf/networks/: __init__.py  input_feat_encoder.py  protein_encoder.py
alphasurf/protein/: atom_graph.py  create_esm.py  create_operators.py  create_surface.py  features.py  graphs.py  main_data.py  protein.py  protein_loader.py  residue_graph.py  surfaces.py  transforms.py
alphasurf/utils/: atom_utils.py  batch_sampler.py  callbacks.py  config_utils.py  data_utils.py  learning_utils.py  metrics.py  python_utils.py  timing_stats.py  torch_utils.py  wrappers.py
cgal_alpha_bindings/: CMakeLists.txt  README.md  cgal_alpha_bindings.cpp  cgal_alpha_bindings_algo2.cpp  cgal_alpha_raw.cpp  cgal_alpha_tagged.cpp  cgal_pmp_repair.cpp  rebuild.sh  rebuild_h100.sh
cpp_curvature/: build.py  curvature.cpp  test_curvature_ext.py
scripts/: benchmark_laplacian.py  benchmark_laplacian.sh  mesh_statistics.py  plot_timing_vs_size.py  statistics.sh  test_robust_laplacian.py  timing_full.sh  timing_simplify.sh  timing_surface.py  timing_surface.sh  visualize_interface.py  visualize_mesh.py  visualize_singular.py
(+126 files in other folders)
